<resources>
    <string name="app_name">SMK Publik Makassar</string>
    <string name="label_e_learning">E-Learning</string>
    <string name="label_loading">Loading..</string>
    <string name="label_connecting">Connecting..</string>
    <string name="label_email">Email</string>
    <string name="label_password">Kata Sandi</string>
    <string name="label_admin_password">Kata Sandi Admin Saat Ini</string>
    <string name="label_password_repeat">Ulangi Kata Sandi</string>
    <string name="label_nuptk">NUPTK</string>
    <string name="label_class_selection">Kamu Kelas Berapa?</string>
    <string name="label_all">Semua</string>
    <string name="label_class_x">Kelas X</string>
    <string name="label_class_xi">Kelas XI</string>
    <string name="label_class_xii">Kelas XII</string>
    <string name="label_nis">NIS</string>
    <string name="button_label_sign_up_underline"><u>Buat sekarang</u></string>
    <string name="button_label_forgot_password">Lupa Password?</string>
    <string name="button_label_logout">Keluar</string>
    <string name="button_label_sign_up">Daftar</string>
    <string name="button_label_sign_up_admin">Simpan Admin</string>
    <string name="button_label_sign_in">Masuk</string>
    <string name="button_label_sign_in_underline"><u>Sign in</u></string>
    <string name="label_siswa_baru">Pengguna baru?</string>
    <string name="label_sudah_punya_akun">Sudah punya akun ?</string>
    <string name="label_belum_punya_akun">Belum punya akun?</string>
    <string name="button_label_role_siswa">Siswa</string>
    <string name="button_label_role_guru">Guru</string>
    <string name="button_label_role_admin">Admin</string>
    <string name="button_label_role_umum">Umum</string>
    <string name="button_label_continue_with_arrow">lanjut  ></string>
    <string name="button_label_continue">Lanjut</string>
    <string name="button_label_skip">Lewati</string>
    <string name="label_nama">Nama</string>
    <string name="label_search">Cari…</string>
    <string name="label_nomor">No. Telfon</string>
    <string name="label_mata_pelajaran">Mata Pelajaran</string>
    <string name="desc_verifikasi">Verifikasi akun akan dikirimkan melalui email sudah anda masukan. Cek kembali email anda.</string>
    <string name="label_verifikasi_dialog_message">Email kamu telah di verifikasi. Terima kasih.</string>
    <string name="button_label_verifikasi">Verifikasi</string>
    <string name="tutorial_page_1_message">Selamat datang di aplikasi</string>
    <string name="tutorial_page_2_message">Sistem pembelajaran secara online ( E - Learning )</string>
    <string name="tutorial_page_3_message">Belajar lebih simple dan juga efisien</string>
    <string name="label_forgot_password_toolbar">Lupa Password?</string>
    <string name="label_forgot_password_message_1">Masukan Email yang telah dihubungkan dengan akun anda.</string>
    <string name="label_forgot_password_message_2">Kami akan mengirim link untuk reset ulang password anda.</string>
    <string name="label_forgot_password_dialog_message">Email untuk reset password anda telah dikirim. Terima kasih.</string>
    <string name="label_forgot_password_request_hint">Masukan Email kamu</string>
    <string name="label_change_password_toolbar">Password Baru</string>
    <string name="label_change_password_message_1">Buat password baru yang kuat untuk akunmu.</string>
    <string name="label_change_password_message_2">Setelah password diubah, silahkan masuk kembali dengan password barumu.</string>
    <string name="label_change_password_message_3">Buat password baru untuk akun anda.</string>
    <string name="label_change_password_requirement_1">Minimal 8 Karakter</string>
    <string name="label_change_password_hint_1">Password Baru</string>
    <string name="label_change_password_hint_2">Ketik Ulang Password Baru</string>
    <string name="label_change_password_hint_3">Password Lama</string>
    <string name="label_change_password_success_message">Password kamu berhasil diubah. Silahkan masuk kembali.</string>
    <string name="label_change_password_balloon_message">Password harus memenuhi beberapa ketentuan:</string>
    <string name="button_label_send">Kirim</string>
    <string name="label_beranda_jadwal">Jadwal Pelajaran</string>
    <string name="label_beranda_pengumuman">Pengumuman</string>
    <string name="label_button_beranda_jadwal">Cek  Jadwal disini</string>
    <string name="label_edit_profile">Ubah Profile</string>
    <string name="label_button_close">Tutup</string>
    <string name="label_button_umum">Umum</string>
    <string name="label_button_keluar">Keluar</string>
    <string name="label_button_back">Kembali</string>
    <string name="label_button_save">Simpan</string>
    <string name="label_button_ok">OK</string>
    <string name="label_chip_edit">Edit</string>
    <string name="label_menu_change_password">Ganti Password</string>
    <string name="label_menu_change_profile">Ganti Profil Pengguna</string>
    <string name="label_add_mata_pelajaran">Tambah Mata Pelajaran</string>
    <string name="label_add_announcement">Tambah Pengumuman</string>
    <string name="label_add_announcement_target">Penerima Pengumuman *</string>
    <string name="label_add_admin">Tambah Admin</string>
</resources>