<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="listener"
            type="android.view.View.OnClickListener"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvMessage1"
            android:layout_width="379dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/label_forgot_password_message_1"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="?attr/colorOnApproved"/>

        <TextView
            android:id="@+id/tvMessage2"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="72dp"
            android:text="@string/label_forgot_password_message_2"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="?attr/textColorDisabled"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            android:gravity="center"
            android:hint="@string/label_forgot_password_request_hint"
            android:minWidth="225dp"
            android:layout_marginBottom="82dp"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="?attr/colorSecondary"
            android:textColorHint="?attr/colorSecondary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSend"
            android:layout_width="225dp"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{listener}"
            android:text="@string/button_label_send"
            android:textColor="?attr/colorOnDisabled"
            app:backgroundTint="?attr/colorDisabled"
            app:cornerRadius="@dimen/defaultRadius" />
    </LinearLayout>

</layout>

