<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvMessage1"
            android:layout_width="379dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="42dp"
            android:layout_height="wrap_content"
            android:text="@string/label_change_password_message_1"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?attr/colorOnApproved"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPassword"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:hint="@string/label_change_password_hint_1"
            app:hintTextColor="?attr/colorOnDisabled"
            android:textColorHint="?attr/colorOnDisabled"
            app:hintTextAppearance="?attr/textAppearanceBody1"
            app:endIconMode="password_toggle"
            app:endIconTint="?attr/colorOnApproved">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:backgroundTint="?attr/colorOnDisabled"
                tools:textColorHint="@color/textColorDisabled"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnDisabled"
                android:inputType="textPassword"
                app:hintTextAppearance="?attr/textAppearanceBody1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPasswordRepeat"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_change_password_hint_2"
            app:hintTextColor="?attr/colorOnDisabled"
            android:textColorHint="?attr/colorOnDisabled"
            android:layout_marginBottom="24dp"
            app:hintTextAppearance="?attr/textAppearanceBody1"
            app:endIconMode="password_toggle"
            app:endIconTint="?attr/colorOnApproved">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordRepeat"
                android:layout_width="match_parent"
                android:backgroundTint="?attr/colorOnDisabled"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnDisabled"
                android:inputType="textPassword"
                app:hintTextAppearance="?attr/textAppearanceBody1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="?attr/colorDisabledAlpha55"
            android:layout_marginBottom="42dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvMessage2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="?attr/colorDisabled"
                android:text="@string/label_change_password_message_2"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?attr/colorOnApproved"/>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{listener}"
            android:enabled="false"
            android:insetTop="0dp"
            app:cornerRadius="@dimen/defaultRadius"
            android:insetBottom="0dp"
            android:text="@string/button_label_continue"
            android:textColor="?attr/colorOnDisabled"
            app:backgroundTint="?attr/colorDisabled" />

    </LinearLayout>

</layout>

