<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    tools:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textStyle="bold"
        android:text="@string/label_edit_profile"
        android:textColor="?attr/colorPrimaryVariant"
        tools:maxLength="200"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlNama"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_nama"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        app:hintTextColor="?attr/colorPrimaryVariant"
        android:textColorHint="?attr/colorPrimaryVariant"
        app:hintTextAppearance="?attr/textAppearanceBody1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:backgroundTint="?attr/colorPrimaryVariant"
            tools:textColorHint="?attr/colorPrimaryVariant"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimaryVariant"
            android:inputType="textPersonName"
            app:hintTextAppearance="?attr/textAppearanceBody1" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPhone"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_nomor"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="33dp"
        app:hintTextColor="?attr/colorPrimaryVariant"
        android:textColorHint="?attr/colorPrimaryVariant"
        app:hintTextAppearance="?attr/textAppearanceBody1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:backgroundTint="?attr/colorPrimaryVariant"
            tools:textColorHint="?attr/colorPrimaryVariant"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimaryVariant"
            android:inputType="phone"
            app:hintTextAppearance="?attr/textAppearanceBody1" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:insetTop="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="?attr/colorPrimaryVariant"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="25dp"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceBody1"
            app:cornerRadius="@dimen/defaultRadius"
            android:insetBottom="0dp"
            android:text="@string/label_button_back"
            android:textColor="?attr/colorPrimaryVariant"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:insetTop="0dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceBody1"
            app:cornerRadius="@dimen/defaultRadius"
            android:insetBottom="0dp"
            android:text="@string/label_button_save"
            android:textColor="?attr/colorPrimaryVariant"
            app:backgroundTint="?attr/colorSecondary" />

    </LinearLayout>


</LinearLayout>